[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/TreeBottom.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/TreeTop.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Trees.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 32 )

[node name="Trees" type="Node2D"]
script = ExtResource( 3 )

[node name="TreeTop" parent="." instance=ExtResource( 2 )]

[node name="TreeBottom" parent="." instance=ExtResource( 1 )]

[node name="ScoreArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2( -3, -3 )
shape = SubResource( 1 )

[connection signal="body_entered" from="TreeTop" to="." method="_on_TreeTop_body_entered"]
[connection signal="body_entered" from="TreeBottom" to="." method="_on_TreeBottom_body_entered"]
[connection signal="body_entered" from="ScoreArea" to="." method="_on_ScoreArea_body_entered"]
